feat: add academic session and student lifecycle management